--- a/cssAssignment1/style1.css
+++ b/cssAssignment1/style1.css
@@ -11,13 +11,11 @@ list-style-type: none;
 position: relative;
 }
 .navmenu{
-	/*width: 960px;*/
-	/*marging: 2px auto;*/
 	padding: 0px 20px;
 	margin-left: 2px auto;
 	margin-right: auto;
 	text-align: left;
-	/*background-color: #cfcfcf;*/
+	
 	color:#000;
 }
 
@@ -34,55 +32,60 @@ position: relative;
 	display: inline-block;	
 	color:#000;
 	text-align:center;
-	margin-left: 2px;
+	margin-left: -2px;
 	/*border:1px solid red; */
 	height:  37px;
 	line-height: 20px;
 	padding-left: 2px;
 	background-color: #cfcfcf;
+	
+
 
 }
 
-/*.nav ul li:first-child > a:hover{
+.nav ul li:first-child + a:hover{
 	color:#8c8c8c;
 	
-}*/
 
-.nav ul li:hover + a{
+}
+
+.nav ul li:hover a{
 	color:#8c8c8c;
+	background-color: #fff;
+	
+
 }
 
 
-.nav ul li:first-child{
+.nav ul li:first-child {
 	margin-left: none;
 }
 
 .nav ul li:hover {
-/*display: inline-bloc*/
-background color: #000;
+background color: #fff;
 color: black;
 height: 37px;
-/*padding: 0px 2px;*/
-/*margin-left: 2px;*/
 font: Georgia;
 font-style: italic;
 font-size: 18px;
 
 }
 
-.nav ul li a,visited {
+.nav ul li a {
 	color:#000;
 	display: block;
 	padding: 12px;
 	text-decoration: none;
+
+
 }
 
-.nav ul li a:hover {
+/*.nav ul li a:hover {
 	color: #000;
 	text-decoration: none;
 
 	
-}
+}*/
 
 .nav ul li:hover ul{
 	display: block;
@@ -90,20 +93,22 @@ font-size: 18px;
 	
 }
 .nav ul ul {
-	display: none;
-	position:absolute;
-	background-color:#fff;
-	padding: 10px;
-	border: 1px solid #6d6d6d; 
-	border-top: 0px; 
-	margin-left: -5px;
-	width: 190px
+display: none;
+position:absolute;
+background-color:#fff;
+padding: 10px;
+border: 1px solid #6d6d6d;
+border-top: 0px;
+margin-left: -5px;
+width: 190px
+
 }
 
 .nav ul ul li {
 	display: block;
 		background-color: #fff;
 		text-align: left;	
+
 }
 
 .nav ul ul li:last-child a
@@ -121,15 +126,15 @@ border-bottom: none ;
 }
 
 
+
 .nav ul ul li a:visited{
-	color: #000;
-	font-family: Georgia;
-	font-size:14px;
-	/*padding: 5px 0px;*/
-	border-bottom: 1px solid #cfcfcf;
+color: #000;
+font-family: Georgia;
+font-size:14px;
 }
 
 .nav ul ul li a:hover {
 	color: #bd0707;
 	background-color:#fff;
+	
 }
