--- a/cssAssignment1/style1.css
+++ b/cssAssignment1/style1.css
@@ -25,8 +25,10 @@ position: relative;
 	padding: 0px 5px;
 	margin: 0px;
 	position: relative;
-	color:#8c8c8c;
+
+
 }
+
 
 .nav ul li{
 	display: inline-block;	
@@ -36,7 +38,7 @@ position: relative;
 	/*border:1px solid red; */
 	height:  37px;
 	line-height: 20px;
-	padding-left: 2px;
+	/*padding-left: 2px;*/
 	background-color: #cfcfcf;
 	
 
@@ -44,21 +46,25 @@ position: relative;
 }
 
 .nav ul li:first-child + a:hover{
-	color:#8c8c8c;
-	
+	/*color:#8c8c8c;*/
+	border: 1px solid #6d6d6d;
 
 }
 
 .nav ul li:hover a{
 	color:#8c8c8c;
 	background-color: #fff;
-	
-
+		
 }
 
+.nav > ul > li:hover {
+	border: 1px solid #6d6d6d;
+} 
 
+.nav > ul > li:last-child 
 .nav ul li:first-child {
 	margin-left: none;
+
 }
 
 .nav ul li:hover {
@@ -75,9 +81,16 @@ font-size: 18px;
 	color:#000;
 	display: block;
 	padding: 12px;
+	padding-bottom: 9px;
 	text-decoration: none;
+	margin-bottom: -5px;
 
 
+}
+
+.nav ul li + a {
+
+	border: 1px solid #6d6d6d;
 }
 
 /*.nav ul li a:hover {
@@ -96,11 +109,11 @@ font-size: 18px;
 display: none;
 position:absolute;
 background-color:#fff;
-padding: 10px;
+/*padding: 10px;*/
 border: 1px solid #6d6d6d;
 border-top: 0px;
-margin-left: -5px;
-width: 190px
+margin-left: -1px;
+width: 200px
 
 }
 
@@ -116,6 +129,7 @@ width: 190px
 border-bottom: none ;
 }
 
+/*list inside list condition 5 */
 .nav ul ul li a {
 	color: black;
 	font-family: Georgia;
